--- a/index.html
+++ b/index.html
@@ -4,64 +4,79 @@
     <meta charset="utf-8" />
     <meta name="description" content="" />
     <title>Effective Solutions for Your Business</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+      <nav class="navigation">
+        <a href="./index.html" class="header-logo"
+          ><span class="web">Web</span><span class="studio">Studio</span></a
+        >
+        <ul class="navigation-list">
+          <li><a href="" class="navigation-link">Studio</a></li>
+          <li><a href="" class="navigation-link">Portfolio</a></li>
+          <li><a href="" class="navigation-link">Contacts</a></li>
         </ul>
       </nav>
 
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="address-info">
+        <ul class="contacts">
+          <li>
+            <a href="mailto:info@devstudio.com" class="contacts-link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+110001111111" class="contacts-link"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
 
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="banner">
+        <h1 class="banner-head">Effective Solutions for Your Business</h1>
+        <button type="button" class="banner-button">Order Service</button>
       </section>
 
-      <section>
-        <h2>Non-existent thing</h2>
+      <section class="principles">
+        <h2 class="principles-head">Non-existent thing</h2>
 
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+        <ul class="principles-list">
+          <li class="principles-list-item">
+            <h3 class="principles-list-item-head">Strategy</h3>
+            <p class="principles-list-item-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
 
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="principles-list-item">
+            <h3 class="principles-list-item-head">Punctuality</h3>
+            <p class="principles-list-item-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
 
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="principles-list-item">
+            <h3 class="principles-list-item-head">Diligence</h3>
+            <p class="principles-list-item-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
 
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="principles-list-item">
+            <h3 class="principles-list-item-head">Technologies</h3>
+            <p class="principles-list-item-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -69,56 +84,124 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="team">
+        <h2 class="team-head">Our Team</h2>
+        <ul class="team-list">
+          <li class="team-list-item">
             <img
               src="./images/Mark.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-list-item-head">Mark Guerrero</h3>
+            <p class="team-list-item-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-list-item">
             <img
               src="./images/Tom.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-list-item-head">Tom Ford</h3>
+            <p class="team-list-item-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-list-item">
             <img
               src="./images/Camila.jpg"
-              alt="Camila Garcia"
+              alt="Camila Garteam-list-item-textcia"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-list-item-head">Camila Garcia</h3>
+            <p class="team-list-item-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-list-item">
             <img
               src="./images/Daniel.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-list-item-head">Daniel Wilson</h3>
+            <p class="team-list-item-text">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+
+      <section class="portfolio">
+        <h2 class="portfolio-head">Our Portfolio</h2>
+        <ul class="portfolio-list">
+          <li class="portfolio-list-item">
+            <img
+              src="./images/banking-app.jpg"
+              alt="banking-app"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-list-item-head">Banking App</h3>
+            <p class="portfolio-list-item-text">App</p>
+          </li>
+          <li class="portfolio-list-item">
+            <img
+              src="./images/cashless-payment.jpg"
+              alt="cashless-payment"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-list-item-head">Cashless Payment</h3>
+            <p class="portfolio-list-item-text">Marketing</p>
+          </li>
+          <li class="portfolio-list-item">
+            <img
+              src="./images/meditation-app.jpg"
+              alt="meditation-app"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-list-item-head">Meditation App</h3>
+            <p class="portfolio-list-item-text">App</p>
+          </li>
+          <li class="portfolio-list-item">
+            <img
+              src="./images/taxi-service.jpg"
+              alt="taxi-service"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-list-item-head">Taxi Service</h3>
+            <p class="portfolio-list-item-text">Marketing</p>
+          </li>
+          <li class="portfolio-list-item">
+            <img
+              src="./images/screen-illustrations.jpg"
+              alt="screen-illustrations"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-list-item-head">Screen Illustartions</h3>
+            <p class="portfolio-list-item-text">Design</p>
+          </li>
+          <li class="portfolio-list-item">
+            <img
+              src="./images/online-courses.jpg"
+              alt="online-courses"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-list-item-head">Online Courses</h3>
+            <p class="portfolio-list-item-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a href="./index.html" class="footer-logo"
+        ><span class="web">Web</span><span class="studio">Studio</span></a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
