--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8" />
     <meta name="description" content="" />
     <title>Effective Solutions for Your Business</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
@@ -15,10 +21,10 @@
     <header>
       <nav class="navigation">
         <a href="./index.html" class="header-logo"
-          ><span class="web">Web</span><span class="studio">Studio</span></a
+          >Web<span class="studio">Studio</span></a
         >
         <ul class="navigation-list">
-          <li><a href="" class="navigation-link">Studio</a></li>
+          <li><a href="./index.html" class="navigation-link">Studio</a></li>
           <li><a href="" class="navigation-link">Portfolio</a></li>
           <li><a href="" class="navigation-link">Contacts</a></li>
         </ul>
@@ -199,7 +205,7 @@
 
     <footer class="footer">
       <a href="./index.html" class="footer-logo"
-        ><span class="web">Web</span><span class="studio">Studio</span></a
+        >Web<span class="studio">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
