--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-list-item-head">Screen Illustartions</h3>
+            <h3 class="portfolio-list-item-head">Screen Illustrations</h3>
             <p class="portfolio-list-item-text">Design</p>
           </li>
           <li class="portfolio-list-item">
